add import export for json and base64 for test, support CTRL-keys.
Fix method that edit immutable list not being annotated as deprecated