@@ -1,6 +1,7 @@
 package com.hollingsworth.arsnouveau.api.spell;
 
 import com.google.common.collect.ImmutableList;
+import com.google.gson.*;
 import com.hollingsworth.arsnouveau.api.registry.GlyphRegistry;
 import com.hollingsworth.arsnouveau.api.sound.ConfiguredSpellSound;
 import com.hollingsworth.arsnouveau.client.particle.ParticleColor;
@@ -15,10 +16,10 @@ import net.minecraft.world.entity.LivingEntity;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.io.ByteArrayInputStream;
+import java.io.DataInputStream;
+import java.io.IOException;
+import java.util.*;
 
 public class Spell {
 
@@ -76,14 +77,78 @@ public class Spell {
         String[] parts = clipboardString.split(";");
         String name = parts[0];
         List<AbstractSpellPart> recipe = new ArrayList<>();
-        for (int i = 1; i < parts.length; i++) {
-            AbstractSpellPart part = GlyphRegistry.getSpellpartMap().getOrDefault(ResourceLocation.tryParse(parts[i]), null);
-            if (part != null) {
-                recipe.add(part);
+        if (parts.length > 1) {
+            for (int i = 1; i < parts.length; i++) {
+                AbstractSpellPart part = GlyphRegistry.getSpellpartMap().getOrDefault(ResourceLocation.tryParse(parts[i]), null);
+                if (part != null) {
+                    recipe.add(part);
+                }
             }
         }
         return new Spell(name, ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, recipe);
     }
+
+    public static Spell fromJson(String jsonString) {
+        try {
+            JsonObject json = JsonParser.parseString(jsonString).getAsJsonObject();
+
+            int version = json.has("version") ? json.get("version").getAsInt() : 0;
+            if (version != 1) {
+                throw new IllegalArgumentException("Unsupported spell version: " + version);
+            }
+
+            String name = json.get("name").getAsString();
+            JsonArray partsArray = json.getAsJsonArray("parts");
+
+            List<AbstractSpellPart> recipe = new ArrayList<>();
+            for (JsonElement element : partsArray) {
+                String partId = element.getAsString();
+                AbstractSpellPart part = GlyphRegistry.getSpellpartMap()
+                        .getOrDefault(ResourceLocation.tryParse(partId), null);
+                if (part != null) {
+                    recipe.add(part);
+                }
+            }
+
+            return new Spell(name, ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, recipe);
+
+        } catch (JsonSyntaxException | IllegalStateException e) {
+            System.out.println(jsonString);
+            return new Spell();
+        }
+    }
+
+    public static Spell fromBinaryBase64(String base64) {
+        try {
+            byte[] bytes = Base64.getDecoder().decode(base64);
+            DataInputStream in = new DataInputStream(new ByteArrayInputStream(bytes));
+
+            int version = in.readByte();
+            if (version != 2) {
+                throw new IllegalArgumentException("Unsupported spell version: " + version);
+            }
+
+            String name = in.readUTF();
+            int partCount = in.readInt();
+            List<AbstractSpellPart> recipe = new ArrayList<>();
+
+            for (int i = 0; i < partCount; i++) {
+                String partId = in.readUTF();
+                AbstractSpellPart part = GlyphRegistry.getSpellpartMap()
+                        .getOrDefault(ResourceLocation.tryParse(partId), null);
+                if (part != null) {
+                    recipe.add(part);
+                }
+            }
+
+            return new Spell(name, ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, recipe);
+
+        } catch (IOException e) {
+            System.out.println("Failed to read spell from binary base64: " + e.getMessage());
+            return new Spell();
+        }
+    }
+
 
     public ConfiguredSpellSound sound() {
         return sound;
@@ -155,7 +220,7 @@ public class Spell {
     public @Nullable AbstractCastMethod getCastMethod() {
         if (this.recipe == null || this.recipe.isEmpty())
             return null;
-        return this.recipe.get(0) instanceof AbstractCastMethod ? (AbstractCastMethod) recipe.get(0) : null;
+        return this.recipe.getFirst() instanceof AbstractCastMethod ? (AbstractCastMethod) recipe.getFirst() : null;
     }
 
     public List<AbstractAugment> getAugments(int startPosition, @Nullable LivingEntity caster) {
@@ -238,6 +303,11 @@ public class Spell {
         return !this.isEmpty();
     }
 
+    /**
+     * @deprecated Use {@link Mutable#add(AbstractSpellPart, int, int)} or {@link Mutable#add(AbstractSpellPart)} instead.
+     * This method will be removed in a future version as it's backed by an immutable list.
+     */
+    @Deprecated(forRemoval = true)
     public Spell add(AbstractSpellPart spellPart, int count, int index) {
         for (int i = 0; i < count; i++)
             recipe.add(index, spellPart);
@@ -290,6 +360,12 @@ public class Spell {
 
         public Mutable add(int index, AbstractSpellPart spellPart) {
             recipe.add(index, spellPart);
+            return this;
+        }
+
+        public Mutable add(AbstractSpellPart spellPart, int count, int index) {
+            for (int i = 0; i < count; i++)
+                recipe.add(index, spellPart);
             return this;
         }
 
